[gd_scene load_steps=6 format=3 uid="uid://c85b04p6p35b4"]

[ext_resource type="Script" uid="uid://dj8kxmpahlv5w" path="res://scripts/emission_rate_status_popup.gd" id="1_1ke72"]

[sub_resource type="LabelSettings" id="LabelSettings_1ke72"]

[sub_resource type="LabelSettings" id="LabelSettings_ykf56"]

[sub_resource type="LabelSettings" id="LabelSettings_i0y7k"]

[sub_resource type="LabelSettings" id="LabelSettings_k5wtt"]

[node name="EmissionRateStatusPopup" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1ke72")

[node name="UI" type="CanvasLayer" parent="."]

[node name="EmissionRatePopUp" type="PopupPanel" parent="UI"]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(300, 150)
visible = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/EmissionRatePopUp"]
offset_left = 4.0
offset_top = 4.0
offset_right = 296.0
offset_bottom = 146.0

[node name="status_report_island_name" type="Label" parent="UI/EmissionRatePopUp/VBoxContainer"]
layout_mode = 2
text = "Status Report: X"
label_settings = SubResource("LabelSettings_1ke72")
horizontal_alignment = 1

[node name="emission_rate" type="Label" parent="UI/EmissionRatePopUp/VBoxContainer"]
layout_mode = 2
text = "Emission Rate: X%"
label_settings = SubResource("LabelSettings_ykf56")

[node name="population_count" type="Label" parent="UI/EmissionRatePopUp/VBoxContainer"]
layout_mode = 2
text = "Population Count: X"
label_settings = SubResource("LabelSettings_i0y7k")

[node name="development_level" type="Label" parent="UI/EmissionRatePopUp/VBoxContainer"]
layout_mode = 2
text = "Development Level: X"
label_settings = SubResource("LabelSettings_k5wtt")
